package bigtalkdesignMod.v25.v25_3;

public abstract class UnitedNations {
    public abstract void declare(String message, Country country);
}
